--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/${db.name}
-jdbc.username=root
-jdbc.password=root
+jdbc.username=postgres
+jdbc.password=password12345
 
 db.name=later
 
