--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/${db.name}
-jdbc.username=root
-jdbc.password=root
+jdbc.username=postgres
+jdbc.password=password12345
 
 db.name=later
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
-# настройка автоматического создания таблиц при помощи sql-скрипта
+# ????????? ??????????????? ???????? ?????? ??? ?????? sql-???????
 javax.persistence.schema-generation.database.action=create
 javax.persistence.schema-generation.create-script-source=schema.sql
+
+
